--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ database:
   port: 5432
   user: postgres
   password: postgres
-  name: jobscheduler
+  name: jobrunner
   sslmode: disable
 
 server:
