--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,10 +6,21 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: jobrunner
     ports:
-      - 5432:5432
-
+      - "5432:5432"
     volumes:
       - jrdata:/var/lib/postgresql/data
 
+  queue:
+    image: redis:7.4.2-alpine
+    restart: always
+    command: 'redis-server --save 60 1 --loglevel warning'
+    ports:
+      - "6379:6379"
+    environment:
+      REDIS_PASSWORD: redis
+    volumes:
+      - queue:/data
+
 volumes:
   jrdata:
+  queue:
